@@ -30,6 +30,7 @@ Version 1.4.1:
 	Update themes to support showing active commands.
 	Update themes to support showing a commands icon, text or both.
 	Added new Monocon icons, licensed under the MIT license.
+	Added selectionchanged event
 
 Version 1.4.0:
 	New theme "square" added
